syntax = "proto3"; 

option go_package = "remote-build/remote-build";

package remote_build;

service MicService {
  rpc StartBuild (BuildRequest) returns (BuildResponse) {}
}

service WorkerService {
  rpc ProcessWork (WorkRequest) returns (WorkResponse) {}
}

message BuildRequest {
  string filename = 1;  
  bytes file_content = 2;  
}

message WorkRequest {
  string filename = 1;
  bytes file_content = 2;
}

message WorkResponse {
  string filename = 1;
  bytes compiled_content = 2;  
}

message BuildResponse {
  string filename = 1;
  bytes compiled_content = 2;
}